# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.53)
AC_INIT(ptabtools, 0.4, [jelmer@samba.org])
AC_CONFIG_SRCDIR([ptb.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

PROGS="ptb2ly ptb2ascii ptbinfo"

# Checks for libraries.
AC_CHECK_LIB([popt], [poptGetArg], , AC_MSG_ERROR([Popt is required]))
PKG_CHECK_MODULES(LIBXML, libxml-2.0, [ PROGS="$PROGS ptb2xml" ] , AC_MSG_WARN([libxml not found: not building ptb2xml]))
PKG_CHECK_MODULES(LIBXSLT, libxslt, AC_DEFINE(HAVE_XSLT, 1, [whether libxslt is available]) , AC_MSG_WARN([libxslt not found: ptb2xml will not support musicxml]))

AC_SUBST(PROGS)

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS([stdlib.h string.h unistd.h popt.h sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
